test/traefik/ssl-traefik.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: traefik
    chart: traefik-1.86.1
    release: ssl-traefik
  name: ssl-traefik
  namespace: traefik-ingress
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: https
    nodePort: 30001
    port: 443
    protocol: TCP
    targetPort: https
  - name: http
    nodePort: 30002
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: traefik
    release: ssl-traefik
  sessionAffinity: None
  type: NodePort
